--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "type": "module",
-  "description": "[![Actions Status](https://github.com/Ushqo/frontend-project-44/workflows/hexlet-check/badge.svg)](https://github.com/Ushqo/frontend-project-44/actions)",
+  "description": "Brain Games - comma application",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Dmitriy Ushalov",
   "license": "ISC",
   "bin": {
     "brain-games": "bin/brain-games.js",
